feat: add linters checking and format code
